[gd_scene load_steps=3 format=3 uid="uid://crk17pumwhb0a"]

[ext_resource type="Script" uid="uid://bntckrkj3m1rg" path="res://game_visualization.gd" id="1_2y1b0"]
[ext_resource type="Script" uid="uid://b3him1h1rnmhe" path="res://world_info_panel.gd" id="1_jn8v8"]

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2y1b0")

[node name="WorldInfoPanel" type="Panel" parent="."]
custom_minimum_size = Vector2(300, 150)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("1_jn8v8")

[node name="VBoxContainer" type="VBoxContainer" parent="WorldInfoPanel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="MapSizeLabel" type="Label" parent="WorldInfoPanel/VBoxContainer"]
layout_mode = 2

[node name="PlayerCountLabel" type="Label" parent="WorldInfoPanel/VBoxContainer"]
layout_mode = 2

[node name="TickRateLabel" type="Label" parent="WorldInfoPanel/VBoxContainer"]
layout_mode = 2

[node name="TeamsPanel" type="ItemList" parent="."]
layout_mode = 1
offset_left = 20.0
offset_top = 20.0
offset_right = 60.0
offset_bottom = 60.0

[node name="ProjectionContainer" type="Control" parent="."]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ProjectionSelector" type="OptionButton" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0

[connection signal="item_selected" from="ProjectionSelector" to="." method="_on_projection_selected"]
